--- a/app/views/subtasks/index.html.erb
+++ b/app/views/subtasks/index.html.erb
@@ -73,16 +73,69 @@
 }
 
 .left-of-at{
-  margin-top: 12px;
   display: flex;
   align-items: center;
 }
 .left-of-at-input-field{
   border: solid 2px #ADA7C8;
-  border-radius: 999px;
-  height: 26px;
+  border-right: none;
+  border-radius: 999px 0 0 999px;
   width: 100%;
-  margin-left: 8px;
+  padding: 0 8px;
+  height: 28px;
+}
+.input-field-buttons-border{
+  border: solid 2px #ADA7C8;
+  border-radius: 0px 999px 999px 0px;
+  border-left: none;
+}
+.input-field-buttons{
+  display:flex; 
+  align-items: center;
+  gap: 8px;
+  background-color: #CFCAE3;
+  height: 24px;
+  border-radius: 999px;
+  padding: 0 8px;
+  margin-right: 2px;
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
+.submit-button{
+  background-color: transparent;
+  border: none;
+  padding-top: 5px;
+}
+.cancel-button {
+  width: 18px;
+  height: 18px;
+}
+
+.task {
+  font-size: 32px;
+}
+
+.goal-container {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  border-bottom: solid 2px #ADA7C8;
+  padding-bottom: 4px;
+}
+.goal {
+  font-size: 20px;
+}
+.goal-reason {
+  margin-top: 12px;
+  font-size: 20px;
+}
+
+.subtasks-container{
+  font-size: 20px;
+  border-radius: 999px;
+  background-color: #CFCAE3;
+  margin-top: 12px;
+  padding: 4px 8px;
 }
 </style>
 <body>
@@ -100,7 +153,7 @@
             console.log('clicked task id: ' + taskId);
             
             // Hole alle Elemente mit der Klasse "journey-container"
-            const journeyContainers = document.querySelectorAll('.journey-container');
+            const journeyContainers = document.querySelectorAll('.right-side');
             
             // Durch alle journeyContainers iterieren
             journeyContainers.forEach(container => {
@@ -121,60 +174,98 @@
 
   
 </script>
-
 <div id="subtasks">
-      <div class="main-container">
+  <div class="main-container">
     <div>
       <% @timeblocks.each do |timeblock| %>
-        <% if (timeblock.repeatOnDay == @dayIndex || timeblock.dailyRepeat == true) && timeblock.user == current_user%>
-        <div class="left-side">
-          <div class="dot-and-time">
-            <div class="dot"></div>
-            <p><%= timeblock.taskStartingTime%> - <%= timeblock.taskEndingTime%> </p>
-          </div>
+        <% if (timeblock.repeatOnDay == @dayIndex || timeblock.dailyRepeat == true) && timeblock.user == current_user %>
+          <div class="left-side">
+            <div class="dot-and-time">
+              <div class="dot"></div>
+              <p><%= timeblock.taskStartingTime %> - <%= timeblock.taskEndingTime %></p>
+            </div>
 
-          <div class="todo-card-container" >
-            <div class="todo-card" id="todo-card" data-task-id="<%= timeblock.id %>">
-              <p class="task-name"><%= timeblock.task_name %></p>
+            <div class="todo-card-container">
+              <div class="todo-card" id="todo-card" data-task-id="<%= timeblock.id %>">
+                <p class="task-name"><%= timeblock.task_name %></p>
                 <div class="todo-now-container">
-                  <p class="todo-now"><span style="padding-left: 12px;"> <% timeblock.subtasks.each do |subtask|%> <%= subtask.name %> <% end %></span></p>
-                    <svg xmlns="http://www.w3.org/2000/svg" class="check-box" width="20" height="20" fill="#ADA7C8" viewBox="0 0 16 16">
-                      <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425z"/>
-                    </svg>
-                </div>
-
-                <div class="left-of-at">
-
-                  <p style="flex-shrink: 0;">where i left of: </p>
-                  <input class="left-of-at-input-field" placeholder="ee">
+                  <p class="todo-now">
+                    <span style="padding-left: 12px;">
+                      <% timeblock.subtasks.each do |subtask| %>
+                        <%= subtask.name %>
+                      <% end %>
+                    </span>
+                  </p>
+                  <svg xmlns="http://www.w3.org/2000/svg" class="check-box" width="20" height="20" fill="#ADA7C8" viewBox="0 0 16 16">
+                    <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425z"/>
+                  </svg>
                 </div>
 
                 <div class="add-new-task-container">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black" class="plus-svg" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"/>
                   </svg>
-                  <p><span style="padding-left: 4px; padding-right: 12px; "><%= link_to "New subtask", new_subtask_path %></span></p>
+                  <p>
+                    <span style="padding-left: 4px; padding-right: 12px;">
+                      <%= link_to "New subtask", new_subtask_path %>
+                    </span>
+                  </p>
                 </div>
               </div>
+            </div>
           </div>
-        </div>
         <% end %>
       <% end %>
     </div>
 
     <div>
       <% @timeblocks.each do |timeblock| %>
-        <% timeblock.journeys.each do |journey| %>
-          <% if (timeblock.repeatOnDay == @dayIndex || timeblock.dailyRepeat == true) && timeblock.user == current_user %>
+        <% if (timeblock.repeatOnDay == @dayIndex || timeblock.dailyRepeat == true) && timeblock.user == current_user %>
+          <div class="right-side" data-task="<%= timeblock.id %>">
+            <p class="task"><%= timeblock.task_name %></p>
+            <% timeblock.journeys.each do |journey| %>
+              <div class="goal-container">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-flag" viewBox="0 0 16 16">
+                  <path d="M14.778.085A.5.5 0 0 1 15 .5V8a.5.5 0 0 1-.314.464L14.5 8l.186.464-.003.001-.006.003-.023.009a12 12 0 0 1-.397.15c-.264.095-.631.223-1.047.35-.816.252-1.879.523-2.71.523-.847 0-1.548-.28-2.158-.525l-.028-.01C7.68 8.71 7.14 8.5 6.5 8.5c-.7 0-1.638.23-2.437.477A20 20 0 0 0 3 9.342V15.5a.5.5 0 0 1-1 0V.5a.5.5 0 0 1 1 0v.282c.226-.079.496-.17.79-.26C4.606.272 5.67 0 6.5 0c.84 0 1.524.277 2.121.519l.043.018C9.286.788 9.828 1 10.5 1c.7 0 1.638-.23 2.437-.477a20 20 0 0 0 1.349-.476l.019-.007.004-.002h.001M14 1.221c-.22.078-.48.167-.766.255-.81.252-1.872.523-2.734.523-.886 0-1.592-.286-2.203-.534l-.008-.003C7.662 1.21 7.139 1 6.5 1c-.669 0-1.606.229-2.415.478A21 21 0 0 0 3 1.845v6.433c.22-.078.48-.167.766-.255C4.576 7.77 5.638 7.5 6.5 7.5c.847 0 1.548.28 2.158.525l.028.01C9.32 8.29 9.86 8.5 10.5 8.5c.668 0 1.606-.229 2.415-.478A21 21 0 0 0 14 7.655V1.222z"/>
+                </svg>
+                <p class="goal">becoming <%= journey.title %></p>
+              </div>
+            <% end %>
 
-          <div class="journey-container" data-task="<%= timeblock.id %>">
-            <p >becoming a <%= journey.title %> <%= timeblock.id %></p>
+            <% timeblock.subtasks.each do |subtask| %>
+              <div class="subtasks-container">
+                <p style="font-size: 20px;"><%= timeblock.taskStartingTime %> - <%= timeblock.taskEndingTime %> <%= subtask.name %></p>
+              </div>
+              <%= form_with(model: subtask, url: subtask_path(subtask), method: :patch, local: true) do |form| %>
+                <p style="margin-top: 12px; margin-bottom: 4px;">Left of at: </p>
+                <div class="left-of-at">
+                  <%= form.text_field :left_of_at, value: subtask.left_of_at, class: "left-of-at-input-field" %>
+                  <div class="input-field-buttons-border">
+                    <div class="input-field-buttons">
+                      <button type="submit" class="submit-button">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-floppy" viewBox="0 0 16 16">
+                          <path d="M11 2H9v3h2z"/>
+                          <path d="M1.5 0h11.586a1.5 1.5 0 0 1 1.06.44l1.415 1.414A1.5 1.5 0 0 1 16 2.914V14.5a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 14.5v-13A1.5 1.5 0 0 1 1.5 0M1 1.5v13a.5.5 0 0 0 .5.5H2v-4.5A1.5 1.5 0 0 1 3.5 9h9a1.5 1.5 0 0 1 1.5 1.5V15h.5a.5.5 0 0 0 .5-.5V2.914a.5.5 0 0 0-.146-.353l-1.415-1.415A.5.5 0 0 0 13.086 1H13v4.5A1.5 1.5 0 0 1 11.5 7h-7A1.5 1.5 0 0 1 3 5.5V1H1.5a.5.5 0 0 0-.5.5m3 4a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 .5-.5V1H4zM3 15h10v-4.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5z"/>
+                        </svg>
+                      </button>
+                      <svg xmlns="http://www.w3.org/2000/svg" class="cancel-button" width="16" height="16" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
+                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+                        <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
+                      </svg>
+                    </div>
+                  </div>
+                </div>
+              <% end %>
+
+             
+            <% end %>
           </div>
-          <% end %>
-        <% end %> 
+        <% end %>
+        
       <% end %>
     </div>
   </div>
 </div>
+
 </body>
 
