renamed variables from timeblocks, taskStartingTime to starting_time, taskEndingTime to ending_time, task_name to name, repeatOnDay to repeat_on_day

--- a/app/views/journeys/_form.html.erb
+++ b/app/views/journeys/_form.html.erb
@@ -27,7 +27,7 @@
       <% if current_user == timeblock.user%>
       <div>
         <%= check_box_tag "journey[timeblock_ids][]", timeblock.id, journey.timeblock_ids.include?(timeblock.id) %>
-        <%= timeblock.task_name %>
+        <%= timeblock.name %>
       </div>
       <% end %>
     <% end %>
