--- a/app/views/subtasks/_form.html.erb
+++ b/app/views/subtasks/_form.html.erb
@@ -26,7 +26,7 @@
       <% if current_user == timeblock.user%>
       <div>
         <%= check_box_tag "subtask[timeblock_ids][]", timeblock.id, subtask.timeblock_ids.include?(timeblock.id) %>
-        <%= timeblock.task_name %>
+        <%= timeblock.name %>
       </div>
       <% end %>
     <% end %>
